--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -14,8 +14,11 @@ stages:
   - publishImageConfig:
       dockerfilePath: ./Dockerfile
       buildContext: .
-      tag: example-helloserver:${CICD_EXECUTION_SEQUENCE}
+      tag: stark-serverless/example-helloserver:${CICD_EXECUTION_SEQUENCE}
+      pushRemote: true
+      registry: r.addops.soft.360.cn
 - name: Deploy
   steps:
   - applyYamlConfig:
       path: ./deployment.yaml
+notification: {}
