--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -14,11 +14,8 @@ stages:
   - publishImageConfig:
       dockerfilePath: ./Dockerfile
       buildContext: .
-      tag: stark-serverless/example-helloserver:${CICD_EXECUTION_SEQUENCE}
-      pushRemote: true
-      registry: r.addops.soft.360.cn
+      tag: example-helloserver:${CICD_EXECUTION_SEQUENCE}
 - name: Deploy
   steps:
   - applyYamlConfig:
       path: ./deployment.yaml
-notification: {}
